fixed a bug for an jquery.ajax call where the post directive wasn't put in the proper place to use a POST

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -591,9 +591,9 @@ function blastOff() {
 	);
 */
 	$.ajax({
+		type: "POST",
 		data: {
 			jquery_ajax: 	1,
-			type:			'POST',
 			fname:			'blast_search',
 			program:		program,
 			expect:			expect,
