--- a/web/tmpl/Lists.tmpl
+++ b/web/tmpl/Lists.tmpl
@@ -25,6 +25,7 @@ function input_focus(div_id) {
 }
 
 //Filters Rows for search_text - Case sensitive as of now, and searches hidden columns...
+/*
 function filter_rows (search_text){
 	if(!search_text) { $("#list_table_body tr:hidden").show(0);}
 	else if (search_text.length >= 3) {
@@ -34,6 +35,70 @@ function filter_rows (search_text){
 	}
 	$('#filter_count').html('Showing ' + $("#list_table_body tr:visible").length + ' of ' + $("#list_table_body tr").length + ' lists');
 }
+*/
+function filter_rows (search_text) { // fast filter search
+	var visible = 0;
+	var total = 0;
+	
+	if (search_text && search_text.length < 3) { //>
+		return;
+	}
+	
+	//filter_busy(1);
+	
+	if (!search_text) { 
+		$("#list_table_body tr").each(
+			function(index, element) {
+				total++;
+				visible++;
+				$(element).show();
+			}
+		);
+	}
+	else {
+		search_text = search_text.toLowerCase();
+		
+		$("#list_table_body tr").each(
+			function(index, element) {
+				total++;
+				
+				if (element.innerHTML.toLowerCase().indexOf(search_text) != -1) { // match
+					if ( $('#search_type').val() == 1 ) { 
+						$(element).show();
+						visible++;
+					}
+					else {
+						$(element).hide();
+					}
+				}
+				else { // mismatch
+					if ( $('#search_type').val() == 1 ) { 
+						$(element).hide();
+					}
+					else {
+						$(element).show();
+						visible++;				
+					}
+				}
+			}
+		);
+	}
+	
+	set_table();
+	//filter_busy(0);
+	$('#filter_count').html('Showing ' + visible + ' of ' + total + ' rows');
+}
+
+/*
+function filter_busy(busy) {
+	if (busy) {
+		$('#filter_busy').fadeIn();
+	}
+	else {
+		$('#filter_busy').hide();
+	}
+}
+*/
 
 function run_get_lists_for_user(opts){
 	if (!opts) { opts={}; }
@@ -123,12 +188,14 @@ Are you sure you want to permanently delete this list?<p>
 <TMPL_IF LIST_STUFF>
 <SCRIPT language="JavaScript">
 $(document).ready(function(){
+/*
 	// Create new case-insensitive "contains" selector function in jQuery
 	jQuery.expr[":"].icontains = jQuery.expr.createPseudo(function(arg) {
 		return function( elem ) {
 			return jQuery(elem).text().toUpperCase().indexOf(arg.toUpperCase()) >= 0;
 		};
 	});
+*/
 
 	// Setup filter input
 	$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
@@ -145,6 +212,7 @@ $(document).ready(function(){
   <option value="0">Does NOT contain</option>
  </select>
  <span id='filter_count' style="margin-left:20px;"></span>
+ <!-- <img id='filter_busy' src="picts/ajax-loader.gif" style="display:none;" /> -->
 </div>
 
 <table id="list_table" class="small ui-widget-content ui-corner-all">
