--- a/web/tmpl/History.tmpl
+++ b/web/tmpl/History.tmpl
@@ -157,21 +157,28 @@ function myFilter(item, args) {
 	var date_time = item['date_time'];
 	var user_name = item['user'];
 	var comment = item['comment'];
+	if (comment == null) {
+		comment = '';
+	}
 
+	var show = 1;
 	if (args.show != 0) {
 		if (args.show == -1) { // Starred
-			return item['starred'];
+			show = item['starred'];
 		}
 		else if (args.show == -2) { // Commented
-			return comment;
+			show = comment;
 		}
 		else if (args.show == -3) { // Mine
-			return (user_name == '<TMPL_VAR NAME="USER_NAME">');
+			show = (user_name == '<TMPL_VAR NAME="USER_NAME">');
 		}
 		else if (args.show > 0) { // Time Range
 			var diff = new Date() - new Date(date_time.replace(/-/g, '/'));
-			return (diff <= args.show*60*60*1000);
+			show = (diff <= args.show*60*60*1000);
 		}
+	}
+	if (!show) {
+		return false;
 	}
 
 	if (args.searchString != "") {
@@ -181,7 +188,8 @@ function myFilter(item, args) {
 				user_name.toLowerCase().indexOf(args.searchString) == -1 &&
 				item['description'].toLowerCase().indexOf(args.searchString) == -1 &&
 				item['page'].toLowerCase().indexOf(args.searchString) == -1 &&
-				item['link'].toLowerCase().indexOf(args.searchString) == -1 ) 
+				item['link'].toLowerCase().indexOf(args.searchString) == -1 &&
+				comment.toLowerCase().indexOf(args.searchString) == -1 ) 
 			{
 				return false;
 			}
@@ -191,7 +199,8 @@ function myFilter(item, args) {
 				user_name.toLowerCase().indexOf(args.searchString) != -1 ||
 				item['description'].toLowerCase().indexOf(args.searchString) != -1 ||
 				item['page'].toLowerCase().indexOf(args.searchString) != -1 ||
-				item['link'].toLowerCase().indexOf(args.searchString) != -1 )
+				item['link'].toLowerCase().indexOf(args.searchString) != -1 ||
+				comment.toLowerCase().indexOf(args.searchString) == -1 )
 			{
 				return false;
 			}		
@@ -225,60 +234,6 @@ function toggle_star(img) {
 	});
 }
 
-/*
-function filter_rows (search_text) { // fast filter search
-	var visible = 0;
-	var total = 0;
-	
-	if (search_text && search_text.length < 3) { //>
-		return;
-	}
-	
-	filter_busy(1);
-	
-	if (!search_text) { 
-		$("#history_table_body tr").each(
-			function(index, element) {
-				total++;
-				visible++;
-				$(element).show();
-			}
-		);
-	}
-	else {
-		search_text = search_text.toLowerCase();
-		
-		$("#history_table_body tr").each(
-			function(index, element) {
-				total++;
-				
-				if (element.innerHTML.toLowerCase().indexOf(search_text) != -1) { // match
-					if ( $('#search_type').val() == 1 ) { 
-						$(element).show();
-						visible++;
-					}
-					else {
-						$(element).hide();
-					}
-				}
-				else { // mismatch
-					if ( $('#search_type').val() == 1 ) { 
-						$(element).hide();
-					}
-					else {
-						$(element).show();
-						visible++;				
-					}
-				}
-			}
-		);
-	}
-	
-	//set_table();
-	filter_busy(0);
-	$('#filter_count').html('Showing ' + visible + ' of ' + total + ' rows');
-}
-*/
 </SCRIPT>
 
 <div class="small" style="padding-top:15px;padding-bottom:5px;height:27px;">
